# prism-decide

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
prism_decide/: __init__.py  __main__.py  cli.py  config.py  config.yaml.example
prism_decide/agents/: __init__.py  base.py  emotional.py  ethical.py  financial.py  foresight.py  growth.py  health.py  lifestyle.py  market.py  operational.py  rational.py  risk.py  social.py
prism_decide/categories/: __init__.py  registry.py
prism_decide/core/: __init__.py  classifier.py  council.py  synthesizer.py  types.py
prism_decide/providers/: anthropic.py  base.py  openai.py
tests/: conftest.py  test_agents.py  test_classifier.py  test_synthesizer.py  test_types.py
