[project]
name = "prism-decide"
version = "0.1.0"
description = "Multi-agent deliberation system for better decisions"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"

dependencies = [
    "rich>=13.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "click>=8.0",
    "questionary>=2.0",
]

[project.scripts]
prism-decide = "prism_decide.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "black>=24.0", "ruff>=0.5"]

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["prism_decide*"]
